--- a/.github/workflows/upload-to-s3.yml
+++ b/.github/workflows/upload-to-s3.yml
@@ -22,4 +22,4 @@ jobs:
 
     - name: Sync Files to S3
       run: |
-        aws s3 sync dist/ s3://training-aws-s3-1 --delete
+        aws s3 sync trial/dist/ s3://training-aws-s3-1 --delete
